added css styling

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-html {
+.full-background {
     background-image: url("green pasta.jpg");
     background-size: cover;
 }
@@ -9,12 +9,4 @@ h1 {
 
 h2 {
     color: #DCDCDC;
-}
-
-ul {
-	list-style: square outside none;
-}
-
-body {
-  font: normal small-caps normal 24px/1.4 Georgia;
 }
