updated background and text styling

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,4 @@
 .full-background {
-    background-image: url("green pasta.jpg");
+    background-image: url("vintage.jpg");
     background-size: cover;
-}
-
-h1 {
-    color: #FFFFFF;
-}
-
-h2 {
-    color: #DCDCDC;
 }
