--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,5 @@
 @media screen and (min-width: 480px) {
-    
+
     /*****************
 	Two Column Layout
 	******************/
@@ -44,10 +44,10 @@
 }
 
 @media screen and (min-width: 660px) {
-   
+
    /*****************
 	Header
-	******************/ 
+	******************/
 
 	nav {
 		background: none;
@@ -75,7 +75,7 @@
 	}
 
 	header {
-		border-bottom: 5px solid #599a68;
+		border-bottom: 5px solid #6B8793;
 		margin-bottom: 60px;
 	}
 }
