--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,14 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+html { 
+  background: url(images/bg.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 #wrapper {
     max-width: 940px;
     margin: 0 auto;
