--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ body {
 }
 
 html { 
-  background: url(images/bg.jpg) no-repeat center center fixed; 
+  background: url(../img/Cute-Monster.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
